COMPASS-959: Sidebar - Prevent Database and Collection Name Wrapping (#902)

--- a/src/internal-packages/sidebar/styles/sidebar-database.less
+++ b/src/internal-packages/sidebar/styles/sidebar-database.less
@@ -45,6 +45,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     color: @pw;
+    white-space: nowrap;
   }
 
   /* :hover styles */
